--- a/app/src/main/res/layout/activity_create_channel.xml
+++ b/app/src/main/res/layout/activity_create_channel.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".CreateChannel"
     android:background="@drawable/unnamed">
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -43,12 +41,12 @@
             android:inputType="textPersonName" />
 
         <Button
-            android:id="@+id/create_notif"
+            android:id="@+id/create_channel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="go_to_client"
-            android:text="client"
             android:layout_gravity="center|center_horizontal|center_vertical"
+            android:onClick="go_to_client"
+            android:text="Create"
             tools:ignore="MissingConstraints,OnClick" />
     </LinearLayout>
 
