--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Test Notification App"
+            android:text=""
             android:textColor="#FFFFFF"
             android:textSize="25dp" />
 
